<resources>
    <string name="app_name">Helix Browser</string>
    <string name="search_hint">Search or type URL</string>
    <string name="search_tabs_hint">Search your tabs</string>
    <string name="new_tab">New Tab</string>
    <string name="incognito_tab">Incognito Tab</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="history">History</string>
    <string name="downloads">Downloads</string>
    <string name="settings">Settings</string>
    <string name="share">Share</string>
    <string name="find_in_page">Find in page</string>
    <string name="desktop_site">Desktop site</string>
    <string name="mobile_site">Mobile site</string>
    <string name="add_bookmark">Add bookmark</string>
    <string name="remove_bookmark">Remove bookmark</string>
    <string name="clear_history">Clear history</string>
    <string name="downloading">Downloading</string>
    <string name="block_trackers">Block trackers</string>
    <string name="block_third_party_cookies">Block third-party cookies</string>
    <string name="do_not_track">Do Not Track</string>
    <string name="https_upgrade">HTTPS Upgrade</string>
    <string name="anti_fingerprinting">Anti-fingerprinting</string>
    <string name="block_popups">Block popups</string>
    <string name="clear_all_data">Clear all browsing data</string>
    <string name="privacy_settings">Privacy</string>
    <string name="trackers_blocked">Trackers blocked</string>
    <string name="tab_groups">Tab groups</string>
    <string name="pin_tab">Pin tab</string>
    <string name="mute_tab">Mute tab</string>
    <string name="restore_tabs">Restore tabs</string>
    <string name="suspend_tabs">Suspend inactive tabs</string>
    <string name="download_complete">Complete</string>
    <string name="download_in_progress">Downloading… %d%%</string>
    <string name="download_failed">Failed</string>
    <string name="download_paused">Paused</string>
    <string name="download_pending">Pending</string>
    <string name="language">Language</string>
    <string name="select_language">Select Language</string>
    <string name="system_default">System Default</string>
    <string name="cancel">Cancel</string>
    <string name="incognito_mode">Incognito Mode</string>
    <string name="downloading_via_helix">Downloading via Helix Browser</string>
    <string name="download_started">Downloading: %s</string>
    <string name="share_via">Share via</string>
    <string name="search_or_type_url">Search or enter URL...</string>
    <string name="fast_secure_private">Fast • Secure • Private</string>
    <string name="save_history">Save history</string>
    <string name="find">Find</string>
    <string name="bookmarks_hint">Search in bookmarks...</string>
    <string name="no_bookmarks">No bookmarks yet</string>
    <string name="no_bookmarks_subtitle">Save pages to find them quickly later</string>
    <string name="history_hint">Search history...</string>
    <string name="no_history">No browsing history yet</string>
    <string name="private_tab_label">Private</string>
    <string name="ssl_untrusted">Security certificate is not trusted.</string>
    <string name="ssl_expired">Security certificate has expired.</string>
    <string name="ssl_id_mismatch">Domain name does not match certificate.</string>
    <string name="ssl_not_yet_valid">Security certificate is not yet valid.</string>
    <string name="ssl_date_invalid">Certificate date is invalid.</string>
    <string name="ssl_invalid">Security certificate is invalid.</string>
    <string name="ssl_unknown">Unknown SSL error.</string>
    <string name="ssl_title">Insecure Connection</string>
    <string name="ssl_message">%1$s\n\nURL: %2$s\n\nDo you want to proceed?</string>
    <string name="continue_button">Continue</string>
    <string name="go_back_button">Go back</string>
    <string name="error_page_title">Cannot connect</string>
    <string name="error_page_go_back">Go back</string>
    <string name="ssl_error_page_title">Insecure Connection</string>
    <string name="ssl_error_page_message">This website has an invalid security certificate (SSL Error %d).</string>
    <string name="ssl_error_page_go_back">Go back safely</string>
    <string name="search_engine_pref">Search Engine</string>
    <string name="homepage_pref">Homepage</string>
    <string name="javascript_pref">JavaScript</string>
    <string name="javascript_summary">Enable JavaScript for websites</string>
    <string name="desktop_site_summary">Always use desktop version</string>
    <string name="block_ads_title">Block Ads</string>
    <string name="block_ads_summary">Block ads and trackers</string>
    <string name="block_trackers_summary">Block tracking scripts</string>
    <string name="block_third_party_cookies_summary">Block cookies from third-party sites</string>
    <string name="do_not_track_summary">Send Do Not Track request</string>
    <string name="https_upgrade_summary">Automatically upgrade HTTP to HTTPS</string>
    <string name="anti_fingerprinting_summary">Block browser fingerprinting scripts</string>
    <string name="block_popups_summary">Block automatic popup windows</string>
    <string name="trackers_blocked_summary_format">%d trackers blocked</string>
    <string name="clear_cache">Clear Cache</string>
    <string name="clear_cache_summary">Clear cached website data</string>
    <string name="clear_cookies">Clear Cookies</string>
    <string name="clear_cookies_summary">Clear website cookies</string>
    <string name="clear_history_summary">Clear browsing history</string>
    <string name="clear_all_data_summary">Clear all data, cookies and cache</string>
    <string name="tabs_category">Tabs</string>
    <string name="restore_tabs_summary">Restore tabs on restart</string>
    <string name="suspend_tabs_summary">Suspend inactive tabs after 10 minutes</string>
    <string name="info_category">Information</string>
    <string name="version_pref">Version</string>
    <string name="engine_pref">Engine</string>
    <string name="cache_cleared">Cache cleared</string>
    <string name="cookies_cleared">Cookies cleared</string>
    <string name="all_data_cleared">All browsing data cleared</string>
    <string name="homepage_summary">https://www.google.com</string>
    <string name="version_summary">1.0.0</string>
    <string name="engine_summary">WebKit (Android WebView)</string>
    <string name="recommended_languages">Recommended</string>
    <string name="all_languages">All Languages</string>
    <string name="clear_history_dialog_title">Clear History</string>
    <string name="clear_history_dialog_message">Are you sure you want to clear your entire browsing history?</string>
    <string name="clear_history_confirm">Clear</string>
    <string name="history_cleared">History cleared</string>
    <string name="desc_secure">Secure connection</string>
    <string name="desc_not_secure">Not secure</string>
    <string name="security_secure_title">Connection is secure</string>
    <string name="security_secure_message">Your information (for example, passwords or credit card numbers) is private when it is sent to this site.</string>
    <string name="security_not_secure_title">Connection is not secure</string>
    <string name="security_not_secure_message">You should not enter any sensitive information on this site (for example, passwords or credit cards), because it could be stolen by attackers.</string>
    <string name="security_internal_title">Internal page</string>
    <string name="security_internal_message">This is a browser internal page.</string>
    <string name="desc_bookmark">Bookmark this page</string>
    <string name="desc_refresh">Refresh page</string>
    <string name="desc_prev">Previous</string>
    <string name="desc_next">Next</string>
    <string name="desc_close">Close</string>
    <string name="desc_back">Go back</string>
    <string name="desc_forward">Go forward</string>
    <string name="desc_home">Go home</string>
    <string name="desc_more">More options</string>
    <string name="desc_favicon">Favicon</string>
    <string name="desc_delete">Delete</string>
    <string name="tab_count">%d tabs</string>
    <string name="premium_banner_title">Helix Premium</string>
    <string name="premium_banner_subtitle">Ad-free browsing + exclusive features</string>
    <string name="close_all">Close All</string>
    <string name="dismiss">Dismiss</string>
    <string name="no_downloads">No downloads yet</string>
    <string name="no_downloads_subtitle">Files you download will appear here</string>
    <string name="print_page">Print page</string>
    <string name="add_to_home">Add to Home screen</string>
    <string name="translate_page">Translate</string>
    <string name="page_info">Page info</string>
    <string name="zoom_in">Zoom in</string>
    <string name="zoom_out">Zoom out</string>
    <string name="text_zoom">Text zoom</string>
    <string name="copy_link">Copy link</string>
    <string name="link_copied">Link copied</string>
    <string name="open_in_new_tab">Open in new tab</string>
    <string name="open_in_incognito">Open in incognito tab</string>
    <string name="save_image">Save image</string>
    <string name="share_link">Share link</string>
    <string name="reader_mode">Reader mode</string>
    <string name="reopen_closed_tab">Reopen closed tab</string>
    <string name="not_secure">Not secure</string>
    <string name="page_info_connection">Connection</string>
    <string name="page_info_secure_subtitle">Information you send to this site is private</string>
    <string name="page_info_not_secure_subtitle">Your connection to this site is not private. Attackers might be able to see information you give to this site.</string>
    <string name="page_info_internal_subtitle">This is a Helix internal page</string>
    <string name="page_info_permissions">Permissions</string>
    <string name="page_info_no_permissions">No special permissions granted</string>
    <string name="page_info_cookies">Cookies and site data</string>
    <string name="page_info_certificate">Certificate is valid</string>
    <string name="page_info_certificate_invalid">Certificate is not trusted</string>
    <string name="learn_more">Learn more</string>
    <string name="proceed_anyway">Proceed</string>
    <string name="connection_secure">Secure connection</string>
    <string name="connection_not_secure">Not secure</string>
    <string name="connection_internal">Internal page</string>
    <string name="allow">Allow</string>
    <string name="deny">Block</string>
    <string name="permission_location_title">Location request</string>
    <string name="permission_location_message">%1$s wants to access your location.</string>
    <string name="permission_camera_title">Camera request</string>
    <string name="permission_camera_message">%1$s wants to use your camera.</string>
    <string name="permission_mic_title">Microphone request</string>
    <string name="permission_mic_message">%1$s wants to use your microphone.</string>
    <string name="permission_notifications_title">Notifications request</string>
    <string name="permission_notifications_message">%1$s wants to send you notifications.</string>
    <string name="https_only_mode_title">HTTPS-Only mode</string>
    <string name="https_only_mode_summary">Block all insecure (HTTP) connections. Sites without HTTPS will not load.</string>
    <string name="https_only_blocked_title">Connection is not secure</string>
    <string name="https_only_blocked_message">Helix blocked this page because HTTPS-Only mode is on and the site does not support HTTPS.</string>
    <string name="site_permissions_title">Site permissions</string>
    <string name="site_permissions_summary">Manage location, camera, microphone and notification access per site</string>
    <string name="site_permissions_empty">No site permissions saved yet</string>
    <string name="site_permission_revoke">Reset</string>
    <string name="site_permission_label_allow">Allowed</string>
</resources>